# core-storage-notifications-example

./: .gitignore  Cargo.toml  README.md
src/: main.rs
