[package]
name = "core-storage-notifications-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
futures = "0.3"
scienceobjectsdb_rust_api = "0.2.0-rc1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs"] }
tonic = { version = "0.6", features = ["tls", "tls-roots"] }
tokio-stream = "0.1"